--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -1,5 +1,11 @@
 name: Events Demo 1
-on: ...
+on: 
+  # toda vez um pull requesto for aberto será executado
+  pull_request:
+    types:
+      - opened
+  workflow_dispatch:
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
